--- a/src/WhiteBoard.css
+++ b/src/WhiteBoard.css
@@ -1,59 +1,67 @@
-
-.switch {
-    width: 60px;
-    height: 40px;
-    font-size: 14px;
-    margin: 5px;
-    border-radius: 15%;
-    border: 2px solid #333;
-    background-color: #eee;
-    color: #333;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.switch.active {
-    background-color: #5c5c5c;
-    color: white;
-}
-
-.button {
-    width: 60px;
-    height: 40px;
-    font-size: 14px;
-    margin: 5px;
-    border-radius: 15%;
-    border: 2px solid #333;
-    background-color: #eee;
-    color: #333;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-.button:hover {
-    color: rgb(255,255,255);
-    background-color: rgb(255, 58, 58);
-    border-color: rgb(255,58,58);
-}
-.slide_container {
-    width: 100px;
-    padding: 10px;
-    border: 2px solid #ccc;
-    border-radius: 12px;
-    background-color: #f9f9f9;
-    text-align: center;
-    margin: 20px 0;
-}
 .app-container {
-    display: flex;
-    align-items: flex-start; /* Keeps top edges aligned */
-    padding: 20px;
-    gap: 20px; /* Space between sidebar and canvas */
-    }
-.button-panel {
+    display: absolute;
+    width: 100%;
+    height: 100%;
+    align-items: flex-start;
+    gap: 20px;
+  }
+  
+  .panel {
     display: flex;
     flex-direction: column;
     gap: 10px;
-}
-.slider {
+  }
+  
+  .slider-container {
+    width: 100px;
+    padding: 10px;
+    border: 2px solid #fcfafa;
+    border-radius: 12px;
+    background-color: #f9f9f9;
+    text-align: center;
+  }
+  
+  .slider-label {
+    font-family: Arial;
+    color: grey;
+  }
+  
+  .slider {
     width: 90%;
-}
+  }
+  
+  .switch {
+    width: 60px;
+    height: 40px;
+    font-size: 14px;
+    margin: 5px;
+    border-radius: 15%;
+    border: 2px solid #333;
+    background-color: #eee;
+    color: #333;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  .switch.active {
+    background-color: #5c5c5c;
+    color: white;
+  }
+  
+  .clear {
+    width: 60px;
+    height: 40px;
+    font-size: 14px;
+    margin: 5px;
+    border-radius: 15%;
+    border: 2px solid #333;
+    background-color: #eee;
+    color: #333;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  .canvas {
+    border: 2px solid #333;
+  }
+  
